webapp-ns.yaml
kind: Namespace
apiVersion: v1
metadata:
  labels:
    openshift.io/cluster-monitoring: "true"
  name: demo-app
