ssh-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: webapp-ssh
  namespace: demo-app
  labels:
    app: webapp-ssh
    app.kubernetes.io/component: webapp-ssh
    app.kubernetes.io/instance: webapp-ssh
    app.kubernetes.io/name: webapp-ssh
    app.kubernetes.io/part-of: webapp-ssh
    app.openshift.io/runtime: other-linux
    app.openshift.io/runtime-namespace: demo-app
    app.openshift.io/runtime-version: v1.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp-ssh
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: webapp-ssh
        deployment: webapp-ssh
    spec:
      containers:
        - name: webapp-ssh
          image: >-
            quay.io/markhooper27/webapp/webapp-ssh:v1.0
          securityContext:
            privileged: true
          ports:
            - containerPort: 2020
              protocol: TCP
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: www
              mountPath: /home/centos/www
      restartPolicy: Always
      serviceAccountName: webapp-sa
      serviceAccount: webapp-sa
      volumes:
      - name: www
        persistentVolumeClaim:
          claimName: pvc-webapp
